@@ -356,11 +356,11 @@ bool MainWorker::AddHardwareFromParams(
 		//LAN
 		pHardware = new CYouLess(ID, Address, Port);
 		break;
-#ifndef WIN32
 	case HTYPE_1WIRE:
 		//1-Wire file system
 		pHardware = new C1Wire(ID);
 		break;
+#ifndef WIN32
 	case HTYPE_TE923:
 		//TE923 compatible weather station
 		pHardware = new CTE923(ID);
