@@ -4044,6 +4044,10 @@ function RefreshUtilities()
 					status=item.Data;
 					bigtext=item.Data;
 				}
+				else if (item.SubType == "Voltage") {
+					status=item.Data;
+					bigtext=item.Data;
+				}
 				else if (item.Type == "Lux") {
 					status=item.Data;
 					bigtext=item.Data;
@@ -4124,7 +4128,7 @@ function ShowUtilities()
      success: function(data) {
       if (typeof data.result != 'undefined') {
 
-				$.FiveMinuteHistoryDays=data["5MinuteHistoryDays"];
+		$.FiveMinuteHistoryDays=data["5MinuteHistoryDays"];
 
         $.each(data.result, function(i,item){
           if (i % 3 == 0)
@@ -4173,6 +4177,9 @@ function ShowUtilities()
 				else if (item.SubType == "Leaf Wetness") {
 				  xhtm+=item.Data;
 				}
+				else if (item.SubType == "Voltage") {
+				  xhtm+=item.Data;
+				}
 				else if (item.Type == "Lux") {
 				  xhtm+=item.Data;
 				}
@@ -4212,6 +4219,10 @@ function ShowUtilities()
             }
             else if (item.SubType == "Leaf Wetness") {
               xhtm+='leaf48.png" height="48"></td>\n';
+              status=item.Data;
+            }
+            else if (item.SubType == "Voltage") {
+              xhtm+='current48.png" height="48"></td>\n';
               status=item.Data;
             }
             else if (item.Type == "Lux") {
